# server/utils/vectorDbProviders/pinecone/index.js
@@ -131,13 +131,22 @@ class PineconeDB extends VectorDatabase {
           const pineconeNamespace = pineconeIndex.namespace(namespace);
           const { chunks } = cacheResult;
           const documentVectors = [];
+          const cachedChunks = chunks.flat();
+          let chunkIndex = 0;
 
           for (const chunk of chunks) {
             // Before sending to Pinecone and saving the records to our db
             // we need to assign the id of each chunk that is stored in the cached file.
             const newChunks = chunk.map((chunk) => {
+              const currentChunkIndex = chunkIndex++;
               const id = uuidv4();
-              documentVectors.push({ docId, vectorId: id });
+              documentVectors.push({
+                docId,
+                vectorId: id,
+                chunkIndex: currentChunkIndex,
+                chunkCount: cachedChunks.length,
+                chunkText: chunk.metadata?.text,
+              });
               return { ...chunk, id };
             });
             await pineconeNamespace.upsert([...newChunks]);
@@ -187,7 +196,13 @@ class PineconeDB extends VectorDatabase {
           };
 
           vectors.push(vectorRecord);
-          documentVectors.push({ docId, vectorId: vectorRecord.id });
+          documentVectors.push({
+            docId,
+            vectorId: vectorRecord.id,
+            chunkIndex: i,
+            chunkCount: textChunks.length,
+            chunkText: textChunks[i],
+          });
         }
       } else {
         throw new Error(
